<resources>
    <string name="app_name">MAiB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="static_help">Usos basicos de aplicación:\n\n1. Home: Ventana inicial donde podras vonerte hacia la mayoria de las opciones dentro de la app.\n\n2.Dashboard: Ventana donde podras ver tus seguidores, calificación y productos, así cómo crear nuevos.\n\n3. Cuenta: Ventana donde podras editar información limitada sobre tu cuenta (descripción, dirección de correo electronico, teléfono y contraseña).\n\n4. Configuración: Ventana donde podras cambiar ajustes cómo el tema de la app, y la visibilidad de las cartas.5. Categorias: Ventana donde podras buscar productos para agregar al carrito o a tu lista de deseados.</string>
    <string name="static_about">MAiB Es una aplicación creada para artistas que desean crear más allá de un simple hobbie.\n\nEn esta aplicación al registrarte cómo usuario podras comprar artículos a otros artistas cómo promocionar los tuyos ando oportunidad a un ingreso de dinero a través de tu amor por el arte.\n\nUSO DE LA APLICACIÓN MÓVIL Y SUS SERVICIOS\n\nEl Usuario reconoce y acepta que el uso de los contenidos y/o servicios ofrecidos por lapresente aplicación móvil será bajo su exclusivo riesgo y/o responsabilidad. El Usuario se compromete a utilizar la presente aplicación móvil y todo su contenido y Servicios de conformidad con la ley, la moral, el orden público y las presentes Condiciones de Uso, y las Condiciones Particulares que, en su caso, le sean de aplicación. Asimismo, se compromete hacer un uso adecuado de los servicios y/o contenidos de la aplicación móvil y a no emplearlospara realizar actividades ilícitas o constitutivas de delito, que atenten contra los derechos de terceros y/o que infrinjan la regulación sobre propiedad intelectual e industrial, o cualesquiera otras normas del ordenamiento jurídico aplicable. En particular, el Usuario se compromete a no trasmitir, introducir, difundir y poner a disposición de terceros, cualquier tipo de material e información (datos contenidos, mensajes, dibujos, archivos de sonido e imagen, fotografías, software, etc.) que sean contrarios a la ley, la moral, el orden público y las presentes Condiciones de Uso y, en su caso, a las Condiciones Particulares que le sean de aplicación. A título enunciativo, y en ningún caso limitativo o excluyente, el Usuario se compromete a:\n\n- No introducir o difundir contenidos o propaganda de carácter racista, xenófobo, pornográfico, de apología del terrorismo o que atenten contra los derechos humanos.\n\n- No introducir o difundir en la red programas de datos (virus y software nocivo) susceptibles de provocar daños en los sistemas informáticos del proveedor de acceso, sus proveedores o terceros usuarios de la red Internet.\n\n- No difundir, transmitir o poner a disposición de terceros cualquier tipo de información, elemento o contenido que atente contra los derechos fundamentales y las libertades públicas reconocidos constitucionalmente y en los tratados internacionales.\n\n- No difundir, transmitir o poner a disposición de terceros cualquier tipo de información, elemento o contenido que constituya publicidad ilícita o desleal.\n\n- No transmitir publicidad no solicitada o autorizada, material publicitario, "correo basura", "cartas en cadena", "estructuras piramidales", o cualquier otra forma de solicitación, excepto en aquellas áreas (tales como espacios comerciales) que hayan sido exclusivamente concebidas para ello.\n\n- No introducir o difundir cualquier información y contenidos falsos, ambiguos o inexactos de forma que induzca a error a los receptores de la información.\n\n- No suplantar a otros usuarios utilizando sus claves de registro a los distintos servicios y/o contenidos de los Portales.</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="attachment_summary_on">Se mostrara la carta promocional</string>
    <string name="attachment_summary_off">No se mostrara la carta promocional</string>
    <string name="attachment_home_summary_on">Se mostraran recomencaiones en Home</string>
    <string name="attachment_home_summary_off">No se mostraran recomencaiones en Home</string>
    <string name="attachment_accounts_summary_on">Se recomendaran cuentas</string>
    <string name="attachment_accounts_summary_off">Se recomendaran cuentas</string>
</resources>